--- a/configs/deep_sort_config.yaml
+++ b/configs/deep_sort_config.yaml
@@ -1,6 +1,5 @@
 # DeepSORT tracker configuration
-max_age: 30          # Increase from 1 to allow longer coasting
-min_hits: 3         # Keep minimum hits reasonable
-iou_threshold: 0.3  # Keep IOU threshold
-feature_threshold: 0.3  # Lower feature similarity threshold
-confidence_threshold: 0.3  # Add lower confidence threshold
+max_age: 1          # Maximum number of frames to keep alive a track without associated detections
+min_hits: 3         # Minimum number of associated detections before track is initialized
+iou_threshold: 0.3  # Minimum IOU for match
+feature_threshold: 0.5  # Minimum feature similarity for match
